[Media Router] Record channel connect result as enum instead of boolean

"MediaRouter.Cast.Channel.ConnectResult" is recorded as enum at extension
side, but as boolean at browser side, causing Chrome crash. Changed to
record connect result as enum as well at browser side.

Bug: 778761
Change-Id: I9b4270091a4b061660301fa36f9630e23abc628b
Reviewed-on: https://chromium-review.googlesource.com/740563
Commit-Queue: Bin Zhao <zhaobin@chromium.org>
Reviewed-by: Derek Cheng <imcheng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512052}
Former-commit-id: 7c3ecc068e20da5fc83908efed8a5135f3927fdd